Fixed mobile title and image spacing

--- a/source/_assets/stylesheets/_side-by-side.scss
+++ b/source/_assets/stylesheets/_side-by-side.scss
@@ -81,7 +81,7 @@ html {
     }
 
     @include media($tablet) {
-      padding: 2em;
+      padding: 2em 2em 0;
     }
 
     @include media($desktop) {
