--- a/source/_assets/stylesheets/_vertical.scss
+++ b/source/_assets/stylesheets/_vertical.scss
@@ -88,7 +88,7 @@ html {
     }
 
     @include media($tablet) {
-      padding: 2em;
+      padding: 2em 2em 0;
     }
 
     @include media($desktop) {
